# cfquant

./: .gitignore  README.md  cfquant_web_server.py  pyproject.toml  start_cfquant.bat
LTtx/: __init__.py
LTtx/tx/: Config.txt  LTtx_server.py  __init__.py  tx.py
cfquant/: __init__.py  account_routing.py  channels.py  client.py  config.py  hub.py  normal_bridge.py  protocol.py  qmt_bridge.py  tx_trade_bridge.py  xtconstant.py  xtdata.py  xttrader.py  xttype.py
docs/: xtdata_compatibility.md  xttrader_compatibility.md  部署指南.md
qmt_scripts/: CFQUANT.py  CFQUANT_TRADE_LOWLAT.py  tx.py
web_dashboard/: app.js  index.html  styles.css
